--- a/includes/content-service.pug
+++ b/includes/content-service.pug
@@ -91,7 +91,7 @@
                 h2.h2-title.offer-title.h2-title__white Мы с радостью почистим и закоптим ваш улов
                 p.offer-text.offer-text--clean Чистка рыба и Копчение 1шт -200 рублей
             .col-md-6.offer-houses
-                h2.h2-title.offer-title.offer-title--houses.h2-title__white На берегу водоёма находятся уютные домики
+                h2.h2-title.offer-title.offer-title--houses.h2-title__white На берегу<br> водоёма находятся уютные домики
                 p.offer-text Забронировать места можно по телефону: 8 (903) 799-31-41
 .current
     .container-fluid
