--- a/includes/service-header.pug
+++ b/includes/service-header.pug
@@ -1,4 +1,4 @@
-.header
+.header.service-header
 	.container-fluid
 		.row
 			.col-lg-1
@@ -21,8 +21,8 @@
 						a(href="#") Фото
 					li
 						a(href="#") Контакты
-.header-block
+.service-header-block
 	.container-fluid
 		.row
 			.col-lg-12
-				h1.header-block_h1 РЫБАЛКА<br>В ДЕРЕВНЕ ЛЫТКИНО<br>В КЛУБЕ «ТРИ ПЕСКАРЯ»
+				h2.h2-title.h2-title__white РЫБАЛКА<br>В ДЕРЕВНЕ ЛЫТКИНО<br>В КЛУБЕ «ТРИ ПЕСКАРЯ»
