--- a/css/style2.css
+++ b/css/style2.css
@@ -797,3 +797,100 @@
       height: 20px;
       right: -30px;
       top: 10px; } }
+
+/* Price */
+.price::after {
+  content: '';
+  height: 221px;
+  width: 100%;
+  display: block;
+  background: #384e63 url("../img/price-bottom.png") 0 50% no-repeat;
+  background-size: cover; }
+  @media all and (max-width: 768px) {
+    .price::after {
+      height: 120px; } }
+
+.price-content {
+  min-height: 1288px;
+  background: #fff url("../img/price-bg.png") 0 50% no-repeat;
+  background-size: cover;
+  margin-top: -145px;
+  padding-top: 247px; }
+  @media all and (max-width: 768px) {
+    .price-content {
+      min-height: 1150px; } }
+  @media all and (max-width: 480px) {
+    .price-content {
+      min-height: 950px; } }
+  .price-content table {
+    width: 100%;
+    border-spacing: 0; }
+
+.price-container {
+  max-width: 845px;
+  margin: auto; }
+
+.price-title {
+  font-size: 24px;
+  font-weight: 700;
+  line-height: 24px;
+  color: #374f63;
+  padding-left: 30px;
+  margin-bottom: 16px;
+  text-align: left;
+  text-transform: uppercase; }
+  @media all and (max-width: 768px) {
+    .price-title {
+      font-size: 18px;
+      line-height: 18px; } }
+
+.price-cell {
+  padding: 15px 0 14px 0; }
+  @media all and (max-width: 480px) {
+    .price-cell {
+      padding: 5px 0 4px 0; } }
+
+.price-table_name {
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 28px;
+  color: #374f63;
+  padding-left: 30px;
+  letter-spacing: 0.55px; }
+  @media all and (max-width: 768px) {
+    .price-table_name {
+      font-size: 14px;
+      line-height: 24px; } }
+  @media all and (max-width: 480px) {
+    .price-table_name {
+      font-size: 12px;
+      line-height: 16px;
+      padding-left: 10px; } }
+
+.price-table_price {
+  width: 165px;
+  color: #374f63;
+  font-size: 24px;
+  font-weight: 700;
+  line-height: 28px;
+  padding-right: 20px; }
+  @media all and (max-width: 768px) {
+    .price-table_price {
+      font-size: 18px;
+      line-height: 24px;
+      text-align: right; } }
+  @media all and (max-width: 480px) {
+    .price-table_price {
+      width: 105px;
+      font-size: 14px;
+      line-height: 16px;
+      padding-right: 10px; } }
+
+.price-row:nth-child(odd) {
+  background: #bdddf4; }
+
+.price-table {
+  margin-bottom: 45px; }
+  @media all and (max-width: 480px) {
+    .price-table {
+      margin-bottom: 20px; } }
