--- a/css/style2.scss
+++ b/css/style2.scss
@@ -483,9 +483,9 @@
 }
 
 
-/* Current */
+/* current-state */
 
-.current {
+.current-state {
     padding-top: 515px;
     padding-bottom: 290px;
     z-index: 96;
@@ -502,11 +502,11 @@
     }
 }
 
-.current-title {
+.current-state-title {
     margin-bottom: 30px;
 }
 
-.current-text {
+.current-state-text {
     font-size: 30px;
     font-weight: 400;
     line-height: 40px;
