--- a/includes/content-service.pug
+++ b/includes/content-service.pug
@@ -93,12 +93,12 @@
             .col-md-6.offer-houses
                 h2.h2-title.offer-title.offer-title--houses.h2-title__white На берегу<br> водоёма находятся уютные домики
                 p.offer-text Забронировать места можно по телефону: 8 (903) 799-31-41
-.current
+.current-state
     .container-fluid
         .row
             .col-md-12
-                h2.h2-title.current-title.h2-title__white В настоящее время водоем зарыблен следующими видами рыбы
-                p.current-text Карп, весом до 8кг, Сазан, весом до 15кг, Сом, весом до 16кг Щука, весом до 5кг, Окунь, весом до 500г, Форель, весом до 3кг Осётр, весом до 13кг, Сиг, весом до 2кг, Стерлядь, весом до 1кг Линь, весом до 1.2кг, много крупного карася
+                h2.h2-title.current-state-title.h2-title__white В настоящее время водоем зарыблен следующими видами рыбы
+                p.current-state-text Карп, весом до 8кг, Сазан, весом до 15кг, Сом, весом до 16кг Щука, весом до 5кг, Окунь, весом до 500г, Форель, весом до 3кг Осётр, весом до 13кг, Сиг, весом до 2кг, Стерлядь, весом до 1кг Линь, весом до 1.2кг, много крупного карася
 .rest
     .container-fluid
         .row
